--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "Adam Jędrzejowski <a.jedrzejowski@gmail.com>",
     "license": "ISC",
     "devDependencies": {
+        "@types/yup": "^0.29.9",
         "html-webpack-plugin": "^4.5.0",
         "ts-jest": "^26.4.4",
         "ts-loader": "^8.0.11",
@@ -22,6 +23,7 @@
     "dependencies": {
         "dat-swarm-defaults": "^1.0.2",
         "discovery-swarm": "^6.1.0",
-        "get-port": "^5.1.1"
+        "get-port": "^5.1.1",
+        "yup": "^0.30.0"
     }
 }
