--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "strictNullChecks": true,
         "strictBindCallApply": true,
         "strictFunctionTypes": true,
+        "strictPropertyInitialization": false,
         "strict": true
     },
     "exclude": [
