--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.4.20'
 }
 
-group 'edu.pl.edu.pw.aasddudes'
+group 'pl.edu.pw.aasd'
 version '1.0-SNAPSHOT'
+sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
@@ -20,9 +20,18 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     // https://mvnrepository.com/artifact/com.tilab.jade/jade
     compile group: 'com.tilab.jade', name: 'jade', version: '4.5.0'
+}
+
+jar {
+    manifest {
+        attributes "Main-Class": "pl.edu.pw.aasd.main"
+    }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
