--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.tilab.jade/jade
     compile group: 'com.tilab.jade', name: 'jade', version: '4.5.0'
+
+    compile group: 'org.javatuples', name: 'javatuples', version: '1.2'
+
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 }
 
 jar {
