--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,8 @@ dependencies {
     // https://mvnrepository.com/artifact/com.tilab.jade/jade
     compile group: 'com.tilab.jade', name: 'jade', version: '4.5.0'
 
-    compile group: 'org.javatuples', name: 'javatuples', version: '1.2'
-
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    compile "io.javalin:javalin:3.12.0"
 }
 
 jar {
