skonfigurowanie projektu pod windows / java14

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ gradle-app.setting
 *.ctxt
 
 # Mobile Tools for Java (J2ME)
-.mtj.tmp/
+.mtj.tmp/grad
 
 # Package Files #
 *.jar
@@ -40,3 +40,4 @@ src-examples
 # pliki generowane przez biblioteke JADE
 APDescription.txt
 MTPs-Main-Container.txt
+/.idea/*
